--- a/package.json
+++ b/package.json
@@ -15,35 +15,52 @@
     ],
     "extensionPack": [
         "formulahendry.auto-complete-tag",
-        "RogerChi.vsce-gitkeep",
-        "alefragnani.Bookmarks",
-        "CoenraadS.bracket-pair-colorizer-2",
+        "steoates.autoimport",
+        "alefragnani.bookmarks",
+        "segerdekort.angular-cli",
+        "aaron-bond.better-comments",
         "maximus136.change-string-case",
-        "MS-CEINTL.vscode-language-pack-zh-hans",
-        "streetsidesoftware.code-spell-checker",
         "kisstkondoros.vscode-codemetrics",
         "bierner.color-info",
+        "bierner.comment-tagged-templates",
+        "intellsmi.comment-translate",
         "pranaygp.vscode-css-peek",
-        "msjsdiag.debugger-for-chrome",
-        "janisdd.vscode-edit-csv",
-        "EditorConfig.EditorConfig",
+        "sspkudevui.devuihelper",
+        "mikestead.dotenv",
+        "editorconfig.editorconfig",
+        "dbaeumer.vscode-eslint",
+        "mkxml.vscode-filesize",
         "mhutchie.git-graph",
         "eamodio.gitlens",
-        "DavidAnson.vscode-markdownlint",
-        "PKief.material-icon-theme",
+        "oderwat.indent-rainbow",
+        "xabikos.javascriptsnippets",
+        "achil.vscode-javascript-repl",
+        "kiteco.kite",
+        "mrmlnc.vscode-less",
+        "yzhang.markdown-all-in-one",
+        "davidanson.vscode-markdownlint",
+        "pkief.material-icon-theme",
+        "christian-kohler.npm-intellisense",
+        "zhuangtongfa.material-theme",
         "ryu1kn.partial-diff",
-        "Gruntfuggly.todo-tree",
+        "christian-kohler.path-intellisense",
+        "esbenp.prettier-vscode",
+        "lkytal.quicktask",
         "mrmlnc.vscode-scss",
-        "sibiraj-s.vscode-scss-formatter",
-        "cssho.vscode-svgviewer",
-        "deerawan.vscode-faker",
-        "georgejames.thefoldingstuff",
+        "stylelint.vscode-stylelint",
         "jock.svg",
-        "johnsoncodehk.volar",
-        "mariorodeghiero.vue-theme",
-        "ms-vscode.vscode-typescript-tslint-plugin",
+        "cssho.vscode-svgviewer",
+        "iceworks-team.iceworks-time-master",
+        "gruntfuggly.todo-tree",
         "octref.vetur",
-        "quicktype.quicktype",
-        "vscode-icons-team.vscode-icons"
+        "zhepama.vscode-vditor",
+        "wscats.vue",
+        "charleswu.vue-css-peek",
+        "andersonmfjr.vue-jumptotag",
+        "johnsoncodehk.volar",
+        "dariofuzinato.vue-peek",
+        "mariorodeghiero.vue-theme",
+        "shenjiaolong.vue-helper",
+        "streetsidesoftware.code-spell-checker"
     ]
 }
